feat: added vehicle schema for the mongo database
